--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -39,8 +39,8 @@ COPY . .
 # Create necessary directories
 RUN mkdir -p uploads outputs logs
 
-# Expose port (Railway will set PORT env var)
-EXPOSE $PORT
+# Expose port
+EXPOSE 8000
 
 # Command to run the application
-CMD uvicorn main:app --host 0.0.0.0 --port $PORT
+CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}
