--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ['python311', 'pip']
+nixPkgs = ['python311', 'python311Packages.pip', 'gcc']
 
 [phases.install]
 cmds = ['pip install -r requirements.txt']
